# crawler_views

./: .gitignore  Makefile  README.md  crawler_views.opam  dune-project
lib/: api.ml  api.mli  client.ml  client.mli  dune  network.ml  network.mli  util.ml  util.mli
results/views_results/: view_1.txt  view_11.txt  view_12.txt  view_13.txt  view_2.txt  view_20.txt  view_3.txt  view_4.txt  view_5.txt  view_6.txt  view_7.txt  view_8.txt  view_9.txt
src/: crawler.js  crawler_views.ml  crawler_views.mli  dune  package-lock.json  package.json  run.sh
